--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
       flex-direction: column;
       justify-content: center;
       align-items: center;
+      padding: 10px;
     }
 
     h1 {
@@ -48,6 +49,9 @@
       color: #000; /* Black */
       font-family: 'Georgia', serif; /* Elegant font for p */
       font-style: italic; /* Italicized text */
+      height: 200px; /* Set a fixed height for the p element */
+      overflow-y: auto; /* Enable vertical scrolling */
+      margin-top: 20px;
     }
 
     .heart {
@@ -61,6 +65,22 @@
       font-size: 1rem;
       text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.6);
       color: #D72638; /* Charming Red */
+    }
+
+    .play-button {
+      margin-top: 20px;
+      padding: 10px 20px;
+      font-size: 1rem;
+      color: white;
+      background: #D72638; /* Charming Red */
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+      box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2);
+    }
+
+    .play-button:hover {
+      background: #b01e2c; /* Darker red on hover */
     }
 
     /* Sprinkle (Confetti/Hearts) Styles */
@@ -90,45 +110,48 @@
       }
     }
 
-    .play-button {
-      margin-top: 20px;
-      padding: 10px 20px;
-      font-size: 1rem;
-      color: white;
-      background: #D72638; /* Charming Red */
-      border: none;
-      border-radius: 5px;
-      cursor: pointer;
-      box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2);
+    /* Mobile-optimized styles */
+    @media (max-width: 768px) {
+      h1 {
+        font-size: 2.5rem; /* Slightly smaller font for mobile */
+      }
+
+      p {
+        font-size: 1.2rem; /* Smaller font size for mobile */
+        height: 150px; /* Adjust height for smaller screens */
+      }
+
+      footer {
+        font-size: 0.9rem; /* Smaller font size for footer on mobile */
+      }
+
+      .play-button {
+        font-size: 0.9rem;
+        padding: 8px 16px;
+      }
     }
 
-    .play-button:hover {
-      background: #b01e2c; /* Darker red on hover */
-    }
   </style>
 </head>
 <body>
   <h1>Happy Birthday, My Love! 🎉</h1>
   <p>
     Wishing you a day filled with laughter, joy, and all the love in the world.  
-    You light up my life in the most magical way, and today, it's all about celebrating YOU! 
-
-May Allah bless you with a year filled with happiness, health, and prosperity. 
-May your faith grow stronger and your heart be filled with peace.
- May you continue to be a source of light and love in my life. Ameen!	
- 
- (أتمنى لك يومًا مليئًا بالضحك والفرح وكل الحب في العالم. 
-أنت تنير حياتي بأكثر الطرق سحرًا، واليوم، كل شيء يدور حول الاحتفال بك! بارك الله فيك بعام مليء بالسعادة والصحة والازدهار.
- أتمنى أن ينمو إيمانك ويمتلئ قلبك بالسلام. أتمنى أن تظل مصدرًا للنور والحب في حياتي. آمين!)
- 
+    You light up my life in the most magical way, and today, it's all about celebrating YOU!  
+    <span class="heart">❤️</span>
+    <br> 
+    Here's to more adventures, more happiness, and more love together! I'm so lucky to have you in my life.
+    <br> 
+    Thank you for being my rock, my partner, and my best friend. Enjoy your special day, my dear!
+    <br> 
     <span class="heart">❤️</span>
   </p>
 
   <!-- Play Music Button -->
-  <button class="play-button" onclick="playMusic()">🎶 Click me 🎶</button>
+  <button class="play-button" onclick="playMusic()">🎶 Click Me 🎶</button>
 
   <footer>
-    With all my heart, Nahid
+    With all my heart, Abdullah
   </footer>
 
   <!-- Sprinkle Script -->
