--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
   </p>
 
   <!-- Play Music Button -->
-  <button class="play-button" onclick="playMusic()">🎶 Click Me 🎶</button>
+  <button class="play-button" onclick="playMusic()">🎶Click Me 🎶</button>
 
   <footer>
     With all my heart, Abdullah
@@ -168,7 +168,7 @@
     }
 
     // Play Music Script
-    let audio = new Audio('brithdaysong.mp3'); // Replace with your audio file
+    let audio = new Audio('brithdaysong.mp3.mp3'); // Replace with your audio file
     function playMusic() {
       audio.play();
       audio.loop = true; // Loop the audio
