--- a/index.html
+++ b/index.html
@@ -176,8 +176,8 @@
 
   <!-- Sprinkle Script -->
   <script>
-    // Sprinkle Animation
-    const sprinkleCount = 100; // Number of sprinkles
+    // Increased number of sprinkles (more confetti)
+    const sprinkleCount = 200; // Increased to 200 sprinkles
     for (let i = 0; i < sprinkleCount; i++) {
       const sprinkle = document.createElement("div");
       sprinkle.className = "sprinkle";
