--- a/index.html
+++ b/index.html
@@ -168,10 +168,10 @@
   </p>
 
   <!-- Play Music Button -->
-  <button class="play-button" onclick="playMusic()">🎶 Play Music 🎶</button>
+  <button class="play-button" onclick="playMusic()">🎶 Click Me 🎶</button>
 
   <footer>
-    With all my heart, Abdullah
+    With all my heart, Nahid
   </footer>
 
   <!-- Sprinkle Script -->
@@ -188,7 +188,7 @@
     }
 
     // Play Music Script
-    let audio = new Audio('your-audio-file.mp3'); // Replace with your audio file
+    let audio = new Audio('birthdaysong.mp3'); // Replace with your audio file
     function playMusic() {
       audio.play();
       audio.loop = true; // Loop the audio
