--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
     }
 
     // Play Music Script
-    let audio = new Audio('birthdaysong.mp3'); // Replace with your audio file
+    let audio = new Audio('brithdaysong.mp3'); // Replace with your audio file
     function playMusic() {
       audio.play();
       audio.loop = true; // Loop the audio
