--- a/index.html
+++ b/index.html
@@ -154,15 +154,19 @@
   </style>
 </head>
 <body>
-  <h1>Happy Birthday, My Love! 🎉</h1>
+  <h1>Happy Birthday, My Dearest Kerosene! 🎉</h1>
   <p id="scrollable-text">
-    Wishing you a day filled with laughter, joy, and all the love in the world.  
-    You light up my life in the most magical way, and today, it's all about celebrating YOU!  
+    Wishing you a day filled with laughter, joy, and all the love in the world. 
+You are able to light up my life in the most magical way, and today, it's all about celebrating YOU! 
+May Allah bless you with a year filled with happiness, health, and prosperity. 
+May your faith grow stronger and your heart be filled with peace. 
+May you continue to be a source of light and love in my life. Ameen!
     <span class="heart">❤️</span>
     <br> 
-    Here's to more adventures, more happiness, and more love together! I'm so lucky to have you in my life.
-    <br> 
-    Thank you for being my rock, my partner, and my best friend. Enjoy your special day, my dear!
+    أتمنى لك يومًا مليئًا بالضحك والفرح وكل الحب في العالم.
+ أنت تنير حياتي بأكثر الطرق سحرًا، واليوم، كل شيء يدور حول الاحتفال بك!
+ بارك الله فيك بعام مليء بالسعادة والصحة والازدهار. 
+أتمنى أن ينمو إيمانك ويمتلئ قلبك بالسلام. أتمنى أن تظل مصدرًا للنور والحب في حياتي. آمين!
     <br> 
     <span class="heart">❤️</span>
   </p>
